# LGTManga

./: .gitignore  Pipfile  main.py  pyproject.toml
lgtmanga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crop_lgtm.py
